# engram

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Engram.bat  Engram.desktop  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  engram-server.service  engram.sh  pyproject.toml  requirements.txt  setup-remote.sh  setup.sh
.githooks/: patterns.local.example  post-checkout  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
migrations/: 001_initial.sql
scripts/: migrate_sqlite_to_postgres.py
src/engram/: __init__.py  __main__.py  chunker.py  db.py  embeddings.py  errors.py  migrate.py  pool.py  search.py  server.py  types.py  util.py
tests/: conftest.py  stress_test.py  test_chunker.py  test_consolidate.py  test_db.py  test_embeddings.py  test_search.py  test_server.py  test_util.py
