[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "3.0.0"
description = "Persistent three-layer memory for AI agents, exposed as an MCP server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "shugav" },
]
keywords = ["mcp", "memory", "ai", "agents", "knowledge-graph", "postgres", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/shugav/engram"
Repository = "https://github.com/shugav/engram"
Issues = "https://github.com/shugav/engram/issues"

[project.scripts]
engram = "engram.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow (e.g. consolidation benchmarks)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/engram/db.py" = ["E501"]
"scripts/migrate_sqlite_to_postgres.py" = ["E501"]
